[package]
name = "diversifier"
version = "0.1.0"
authors = ["Jacarte <javierca@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0.0", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.4.3"
rand = "0.7.2"