[package]
name = "example_captcha"
version = "0.2.0"
authors = []
edition = "2018"
#rustc-link-search = ["./src/lib"]
#root = "/Users/javierca/Documents/Develop/fastly4edge/link_sodium"


[dependencies]
fastly = "^0.7.0"

[build-dependencies]
bindgen = "0.53.1"
#wat2mir_macro = { path = "../wiversify/wat2mir_macro" }
#

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 0